<resources>
    <string name="app_name" translatable="false">SmartAlert</string>
    <string name="comments">Comments</string>
    <string name="Earthquake">Earthquake</string>
    <string name="Flood">Flood</string>
    <string name="Fire">Fire</string>
    <string name="Hurricane">Hurricane</string>
    <string name="Storm">Storm</string>
    <string name="earthquake">Earthquake</string>
    <string name="flood">Flood</string>
    <string name="fire">Fire</string>
    <string name="hurricane">Hurricane</string>
    <string name="storm">Storm</string>
    <string name="location">Location:</string>
    <string name="insertAlert">Insert Alert</string>
    <string name="selectImage">SELECT IMAGE</string>
    <string name="loginButton">Login</string>
    <string name="event">Event:</string>
    <string name="time">Date:</string>
    <string name="count">Reported Incidents:</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="checkBox">Send Notification for Similar Events</string>
    <string name="addInstructions">Add instructions</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="back">BACK</string>
    <string name="viewEvents">View Events</string>
    <string name="userAlert">Insert Alert</string>
    <string name="approveAlert">Approve Alert</string>
    <string name="viewStatistics">View Statistics</string>
    <string name="mainActivity">Home</string>
    <string name="registerActivity">Register</string>
    <string name="logout">LOG OUT</string>
    <string name="customInstructions">Enable to add custom instructions</string>
    <string name="alertEarthquake">Drop, cover, and hold on. Stay away from windows and objects that can fall. Evacuate if instructed to do so. Seek shelter until the shaking stops.</string>
    <string name="alertFlood">Evacuate immediately and move to higher ground. Avoid low-lying areas and do not attempt to drive or walk through flooded areas. Stay tuned for updates and follow the instructions of local authorities.</string>
    <string name="alertStorm">Seek immediate shelter. Stay indoors and avoid windows. Stay tuned for updates and follow the instructions of local authorities.</string>
    <string name="alertHurricane">A hurricane is approaching. Please take immediate action to secure your property and evacuate if instructed to do so by local authorities. Stay tuned for updates and follow all official evacuation orders.</string>
    <string name="alertFire">A fire has been reported in the area. Evacuate immediately and proceed to a safe location. Follow the guidance of emergency services personnel and stay tuned for updates. Do not use elevators. Call 911 if you are in immediate danger.</string>
    <string name="toastGrantLocation">Please grant location access!</string>
    <string name="toastSucLogIn">You have successfully logged in!</string>
    <string name="toastBackAgain">Press back again to exit.</string>
    <string name="toastSucLogout">Logged out successfully!</string>
    <string name="toastSucUserReg">Success! User Registered.</string>
    <string name="toastLocOn">Please turn on your Location!</string>
    <string name="toastNotifOn">Please grant access to Notifications permission!</string>
    <string name="toastAllowATT">Please enable the \'Allow all the time\' field in Location permission!</string>
    <string name="toastSucUp">Successfully uploaded!</string>
    <string name="toastFailUp">Failed to upload!</string>
    <string name="toastSucAlert">Alert has been sent successfully!</string>
    <string name="userInsertAlert">INSERT ALERT</string>
    <string name="countStatistics">Incidents: </string>
    <string name="welcomeText">Logged in as:</string>
    <string name="error">Error!</string>
    <string name="passMatch">Passwords do not match.</string>
    <string name="fillForm">Please fill in the form.</string>
    <string name="occurerror">An error occurred. Please try again!</string>
    <string name="listening">Listening for Alerts...</string>
    <string name="stoplistening">Stop Listening</string>
    <string name="zero" translatable="false">0</string>
</resources>