<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ApproveAlert">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="77dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imageApprove"
                    android:layout_width="152dp"
                    android:layout_height="152dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="80dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="79dp"
                    android:layout_marginBottom="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.027"
                    app:srcCompat="@drawable/insert_photo_here"
                    tools:ignore="ContentDescription" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="384dp"
                android:layout_height="38dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageApprove"
                app:layout_constraintVertical_bias="0.04"
                tools:ignore="NotSibling,TextSizeCheck">

                <TextView
                    android:id="@+id/eventTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/event"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eventContent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:text="@string/earthquake"
                    android:textSize="25sp"
                    tools:ignore="InefficientWeight,RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="388dp"
                android:layout_height="99dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/locationTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/location"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:ignore="NestedScrolling">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/locationContent"
                            android:layout_width="wrap_content"
                            android:layout_height="120dp"
                            android:layout_marginLeft="30dp"
                            android:layout_weight="1"
                            android:text="@string/earthquake"
                            android:textSize="25sp"
                            tools:ignore="InefficientWeight,RtlHardcoded" />
                    </LinearLayout>
                </ScrollView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="384dp"
                android:layout_height="38dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TextSizeCheck">

                <TextView
                    android:id="@+id/timestampTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/time"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/timestampContent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:text="@string/earthquake"
                    android:textSize="25sp"
                    tools:ignore="InefficientWeight,RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="384dp"
                android:layout_height="38dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="TextSizeCheck,TextSizeCheck">

                <TextView
                    android:id="@+id/countTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/count"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/countContent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:layout_weight="1"
                    android:text="@string/earthquake"
                    android:textSize="25sp"
                    tools:ignore="InefficientWeight,RtlHardcoded" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="384dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
                app:layout_constraintVertical_bias="0.0">

                <TextView
                    android:id="@+id/commentsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/comments"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:ignore="NestedScrolling">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/commentsContent"
                            android:layout_width="231dp"
                            android:layout_height="211dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginTop="0dp"
                            android:layout_marginEnd="0dp"
                            android:layout_weight="1"
                            android:text="@string/earthquake"
                            android:textSize="25sp"
                            tools:ignore="InefficientWeight,RtlHardcoded" />

                    </LinearLayout>
                </ScrollView>

            </LinearLayout>

            <CheckBox
                android:id="@+id/customInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/customInstructions"
                android:textSize="18dp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/addInstuctions"
                android:layout_width="386dp"
                android:layout_height="152dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="10dp"
                android:ems="10"
                android:enabled="false"
                android:gravity="start|top"
                android:hint="@string/addInstructions"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
                tools:ignore="Autofill,HardcodedText" />

            <CheckBox
                android:id="@+id/notificationAll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkBox"
                android:textSize="18dp"
                android:textStyle="bold|italic" />

            <LinearLayout
                android:layout_width="384dp"
                android:layout_height="120dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/addInstuctions">

                <Button
                    android:id="@+id/rejectButton"
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:onClick="reject"
                    android:text="@string/reject"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/acceptButton"
                    android:layout_width="184dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:onClick="accept"
                    android:text="@string/accept"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>